Added angular dialog wizard

--- a/app/assets/css/theme.css
+++ b/app/assets/css/theme.css
@@ -49,287 +49,21 @@
     margin-left: 10px; } }
 /* BEGIN: layout.scss
 // -----------------------------------------------------*/
-html, body {
-  height: 100%; }
+.colonnade {
+  overflow: hidden;
+  width: 100%; }
 
-body {
-  /* Full Height Layout */ }
-  body .full-height-flex {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    height: 100%;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column; }
-    body .full-height-flex main {
-      -webkit-box-flex: 1 1 auto;
-      -moz-box-flex: 1 1 auto;
-      -webkit-flex: 1 1 auto;
-      -ms-flex: 1 1 auto;
-      flex: 1 1 auto;
-      min-height: 0px; }
-  body.app-layout {
-    padding-top: 74px; }
-    body.app-layout .page-actionbar {
-      height: 45px;
-      top: 30px;
-      /* Analyses Menu */ }
-      body.app-layout .page-actionbar .btn-link {
-        font-weight: 400;
-        margin-left: 5px; }
-        body.app-layout .page-actionbar .btn-link .fa {
-          margin-left: 5px; }
-      body.app-layout .page-actionbar .page-actions {
-        line-height: 45px; }
-      body.app-layout .page-actionbar .page-actions > .navbar-right {
-        margin: 0 20px 0 0; }
-        body.app-layout .page-actionbar .page-actions > .navbar-right li {
-          float: left; }
-          body.app-layout .page-actionbar .page-actions > .navbar-right li .btn {
-            margin-left: 5px; }
-      body.app-layout .page-actionbar .page-actions .search-analysis {
-        margin-top: 5px;
-        position: relative; }
-        body.app-layout .page-actionbar .page-actions .search-analysis > .btn-link {
-          position: absolute;
-          right: 0;
-          top: 0; }
-      body.app-layout .page-actionbar .page-actions.dropdown-analysis-open {
-        display: none; }
-        body.app-layout .page-actionbar .page-actions.dropdown-analysis-open .btn-link {
-          margin-right: 5px; }
-      body.app-layout .page-actionbar .page-navigator {
-        padding-bottom: 6px;
-        padding-top: 6px; }
-      body.app-layout .page-actionbar .page-navigator.open {
-        position: static; }
-        body.app-layout .page-actionbar .page-navigator.open .dropdown-analysis {
-          display: table;
-          left: 0;
-          margin-top: 1px;
-          padding-bottom: 20px;
-          right: 0;
-          width: 100%; }
-      body.app-layout .page-actionbar .page-navigator dl {
-        list-style: none;
-        margin: 0 5px;
-        max-height: 350px;
-        overflow-y: auto;
-        padding: 0; }
-        body.app-layout .page-actionbar .page-navigator dl dt {
-          color: #d2d7dd;
-          padding: 15px 0 15px 10px; }
-        body.app-layout .page-actionbar .page-navigator dl dd > a {
-          clear: both;
-          color: #d2d7dd;
-          display: block;
-          padding: 5px 10px;
-          white-space: nowrap; }
-          body.app-layout .page-actionbar .page-navigator dl dd > a:hover {
-            -moz-transition: all 0.4s ease;
-            -ms-transition: all 0.4s ease;
-            -o-transition: all 0.4s ease;
-            -webkit-transition: all 0.4s ease;
-            transition: all 0.4s ease;
-            background: white;
-            text-decoration: none; }
-    body.app-layout main {
-      position: relative;
-      width: 100%; }
-      body.app-layout main .workarea-container {
-        border: 1px solid #0387ab;
-        bottom: 0;
-        left: 0;
-        margin: 10px;
-        overflow-y: auto;
-        overflow-x: hidden;
-        position: absolute;
-        right: 0;
-        top: 0; }
-        body.app-layout main .workarea-container > .nav-tabs {
-          height: 100%;
-          position: absolute; }
-        body.app-layout main .workarea-container.tabs-left > .nav-tabs > li > a {
-          -moz-transition: all 0.4s ease;
-          -ms-transition: all 0.4s ease;
-          -o-transition: all 0.4s ease;
-          -webkit-transition: all 0.4s ease;
-          transition: all 0.4s ease; }
-          body.app-layout main .workarea-container.tabs-left > .nav-tabs > li > a:hover {
-            -moz-transition: all 0.4s ease;
-            -ms-transition: all 0.4s ease;
-            -o-transition: all 0.4s ease;
-            -webkit-transition: all 0.4s ease;
-            transition: all 0.4s ease;
-            background: none;
-            border-color: transparent; }
-        body.app-layout main .workarea-container .tab-content > .tab-pane {
-          min-height: 400px; }
-          body.app-layout main .workarea-container .tab-content > .tab-pane .workarea .workarea-actions {
-            line-height: 31px;
-            padding-left: 40px; }
-            body.app-layout main .workarea-container .tab-content > .tab-pane .workarea .workarea-actions .chart-title {
-              text-align: center; }
-              body.app-layout main .workarea-container .tab-content > .tab-pane .workarea .workarea-actions .chart-title h3 {
-                display: inline-block;
-                margin-top: 10px;
-                width: auto; }
-              body.app-layout main .workarea-container .tab-content > .tab-pane .workarea .workarea-actions .chart-title h4 {
-                color: #666666;
-                margin-top: 0;
-                text-align: center; }
-            body.app-layout main .workarea-container .tab-content > .tab-pane .workarea .workarea-actions .nav-charts > li > a {
-              -webkit-border-radius: 0;
-              -moz-border-radius: 0;
-              -ms-border-radius: 0;
-              border-radius: 0; }
-            body.app-layout main .workarea-container .tab-content > .tab-pane .workarea .workarea-actions .flex-column:last-child {
-              padding-right: 5px; }
-          body.app-layout main .workarea-container .tab-content > .tab-pane .workarea .workspace {
-            margin-left: 40px; }
-            body.app-layout main .workarea-container .tab-content > .tab-pane .workarea .workspace #highchart {
-              min-height: 300px; }
-            body.app-layout main .workarea-container .tab-content > .tab-pane .workarea .workspace .visualizations {
-              padding-left: 15px; }
-              body.app-layout main .workarea-container .tab-content > .tab-pane .workarea .workspace .visualizations.add-a-table {
-                width: 200px; }
-              body.app-layout main .workarea-container .tab-content > .tab-pane .workarea .workspace .visualizations.add-a-chart {
-                border-left: 1px solid #0387ab; }
-              body.app-layout main .workarea-container .tab-content > .tab-pane .workarea .workspace .visualizations h3 {
-                margin: 0;
-                padding-left: 5px;
-                line-height: 36px; }
-              body.app-layout main .workarea-container .tab-content > .tab-pane .workarea .workspace .visualizations header .chart-toggle {
-                margin-right: 10px;
-                text-align: right; }
-                body.app-layout main .workarea-container .tab-content > .tab-pane .workarea .workspace .visualizations header .chart-toggle .btn-link {
-                  background: #c7c7c7;
-                  color: #333333;
-                  margin-bottom: 3px;
-                  margin-top: 5px;
-                  padding-bottom: 3px;
-                  padding-top: 3px;
-                  font-size: 12px;
-                  letter-spacing: 0;
-                  -webkit-border-radius: 3px;
-                  -moz-border-radius: 3px;
-                  -ms-border-radius: 3px;
-                  border-radius: 3px; }
-                  body.app-layout main .workarea-container .tab-content > .tab-pane .workarea .workspace .visualizations header .chart-toggle .btn-link:hover {
-                    background: #999; }
-                  body.app-layout main .workarea-container .tab-content > .tab-pane .workarea .workspace .visualizations header .chart-toggle .btn-link.active {
-                    background: #999;
-                    color: #fff;
-                    -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.175);
-                    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.175); }
-              body.app-layout main .workarea-container .tab-content > .tab-pane .workarea .workspace .visualizations > ul {
-                list-style: none;
-                margin-top: 20px;
-                padding: 0;
-                overflow: hidden; }
-                body.app-layout main .workarea-container .tab-content > .tab-pane .workarea .workspace .visualizations > ul li {
-                  border: 1px solid #4bd6fc;
-                  float: left;
-                  min-height: 135px;
-                  width: 170px;
-                  margin: 0 5px 5px 0;
-                  -moz-transition: all 0.25s ease;
-                  -ms-transition: all 0.25s ease;
-                  -o-transition: all 0.25s ease;
-                  -webkit-transition: all 0.25s ease;
-                  transition: all 0.25s ease; }
-                  body.app-layout main .workarea-container .tab-content > .tab-pane .workarea .workspace .visualizations > ul li:hover {
-                    cursor: pointer;
-                    border-color: #fff;
-                    background: #55d8fc;
-                    -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.175);
-                    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.175); }
-                    body.app-layout main .workarea-container .tab-content > .tab-pane .workarea .workspace .visualizations > ul li:hover .visualization {
-                      background: #04afdd; }
-                  body.app-layout main .workarea-container .tab-content > .tab-pane .workarea .workspace .visualizations > ul li .visualization {
-                    background: #4bd6fc;
-                    margin: 3px;
-                    height: 85px;
-                    padding-bottom: 5px; }
-                  body.app-layout main .workarea-container .tab-content > .tab-pane .workarea .workspace .visualizations > ul li > span {
-                    display: block;
-                    text-align: center; }
-                body.app-layout main .workarea-container .tab-content > .tab-pane .workarea .workspace .visualizations > ul.highlight li {
-                  opacity: .25; }
-                  body.app-layout main .workarea-container .tab-content > .tab-pane .workarea .workspace .visualizations > ul.highlight li.on {
-                    opacity: 1; }
-                  body.app-layout main .workarea-container .tab-content > .tab-pane .workarea .workspace .visualizations > ul.highlight li:hover {
-                    opacity: 1; }
-            body.app-layout main .workarea-container .tab-content > .tab-pane .workarea .workspace .lt-column {
-              width: 25%;
-              max-width: 190px; }
-            body.app-layout main .workarea-container .tab-content > .tab-pane .workarea .workspace .rt-column {
-              width: 75%;
-              border-left: 1px solid #0387ab;
-              padding-left: 20px; }
-              body.app-layout main .workarea-container .tab-content > .tab-pane .workarea .workspace .rt-column > li {
-                float: left; }
-            @media (max-width: 768px) {
-              body.app-layout main .workarea-container .tab-content > .tab-pane .workarea .workspace .lt-column {
-                max-width: 100%; }
-              body.app-layout main .workarea-container .tab-content > .tab-pane .workarea .workspace .lt-column, body.app-layout main .workarea-container .tab-content > .tab-pane .workarea .workspace .rt-column {
-                width: 100%; }
-                body.app-layout main .workarea-container .tab-content > .tab-pane .workarea .workspace .lt-column > ul li, body.app-layout main .workarea-container .tab-content > .tab-pane .workarea .workspace .rt-column > ul li {
-                  float: left; } }
-          body.app-layout main .workarea-container .tab-content > .tab-pane .workarea {
-            -moz-transition: all 0.25s ease;
-            -ms-transition: all 0.25s ease;
-            -o-transition: all 0.25s ease;
-            -webkit-transition: all 0.25s ease;
-            transition: all 0.25s ease;
-            width: 100%; }
-          body.app-layout main .workarea-container .tab-content > .tab-pane .workarea-pane {
-            -moz-transition: all 0.25s ease;
-            -ms-transition: all 0.25s ease;
-            -o-transition: all 0.25s ease;
-            -webkit-transition: all 0.25s ease;
-            transition: all 0.25s ease;
-            border-left: 1px solid #0387ab;
-            display: none;
-            height: 100%;
-            position: absolute;
-            right: 0;
-            top: 0; }
-            body.app-layout main .workarea-container .tab-content > .tab-pane .workarea-pane > section {
-              margin: 0 10px; }
-              body.app-layout main .workarea-container .tab-content > .tab-pane .workarea-pane > section > footer {
-                padding: 10px; }
-                body.app-layout main .workarea-container .tab-content > .tab-pane .workarea-pane > section > footer .btn {
-                  margin: 0;
-                  width: 100%; }
-          body.app-layout main .workarea-container .tab-content > .tab-pane.pane-open .workarea {
-            -moz-transition: all 0.25s ease;
-            -ms-transition: all 0.25s ease;
-            -o-transition: all 0.25s ease;
-            -webkit-transition: all 0.25s ease;
-            transition: all 0.25s ease;
-            width: 70%; }
-          body.app-layout main .workarea-container .tab-content > .tab-pane.pane-open .workarea-pane {
-            -moz-transition: all 0.25s ease;
-            -ms-transition: all 0.25s ease;
-            -o-transition: all 0.25s ease;
-            -webkit-transition: all 0.25s ease;
-            transition: all 0.25s ease;
-            display: block;
-            width: 30%; }
-          @media (min-width: 768px) {
-            body.app-layout main .workarea-container .tab-content > .tab-pane.pane-open .workarea {
-              width: 60%; }
-            body.app-layout main .workarea-container .tab-content > .tab-pane.pane-open .workarea-pane {
-              width: 40%; } }
-          @media (min-width: 1200px) {
-            body.app-layout main .workarea-container .tab-content > .tab-pane.pane-open .workarea {
-              width: 80%; }
-            body.app-layout main .workarea-container .tab-content > .tab-pane.pane-open .workarea-pane {
-              width: 20%; } }
+.colonnade > .lt-column, .colonnade > .mid-column {
+  float: left; }
+
+.colonnade.dual > .lt-column, .colonnade.dual > .rt-column {
+  width: 50%; }
+
+.colonnade.triple > .lt-column, .colonnade.triple > .mid-column, .colonnade.triple > .rt-column {
+  width: 33.3%; }
+
+.colonnade > .rt-column {
+  float: right; }
 
 /* BEGIN: navbar.scss
 // -----------------------------------------------------*/
