--- a/app/components/dialogs/index.html
+++ b/app/components/dialogs/index.html
@@ -12,37 +12,116 @@
 <!-- Page Nav
 ================================================== -->
 <div class="sg-page-nav">
-  <p>
+  <div>
+    <h6>Navigate To:</h6>
+    <ul>
+      <li><a href="#presentation-state">Dialog</a></li>
+      <li><a href="#readonly-state">Angular Dialog</a></li>
+    </ul>
+  </div>
+  <div>
     <a href="http://getbootstrap.com/javascript/#modals" target="_blank" class="btn btn-default">View Bootstrap Guidelines</a>
-  </p>
+  </div>
 </div>
 
 <!-- Page Content
 ================================================== -->
 
-<h2>Modal Dialogs</h2>
 
-<p>We are using <code>data-id="trigger-dialog"</code> as the trigger to open a dialog. Modifying the dialog is done in JavaScript and the dialog content can be a separate include page.</p>
-<h3>Example Modal Dialog</h3>
-<button class="btn btn-primary" type="button" data-id="trigger-dialog">Launch a Modal Dialog</button>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title" id="presentation-state">Modal Dialog</h3>
+  </div>
+  <div class="panel-body">
+      <!-- BEGIN: CONTENT HERE -->
 
-  <div class="modal fade in paradata-modal proto-example-dialog" tabindex="-1" role="dialog" style="display: block;">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title">Modal title</h4>
-        </div>
-        <div class="modal-body">
-          <p>One fine body&hellip;</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
-  </div><!-- /.modal -->
+      <p>We are using <code>data-id="trigger-dialog"</code> as the trigger to open a dialog. Modifying the dialog is done in JavaScript and the dialog content can be a separate include page.</p>
+           
+      <h4>Launch Modal Dialog</h4>
+      <!-- Button trigger modal -->
+      <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modalExample">Launch demo modal</button>
+      <div id="modalExample" class="modal fade in paradata-modal" tabindex="-1" role="dialog">
+          <div class="modal-dialog">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                      <h4 class="modal-title">Modal title</h4>
+                  </div>
+                  <div class="modal-body">
+                      <p>One fine body&hellip;</p>
+                  </div>
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                      <button type="button" class="btn btn-primary">Save changes</button>
+                  </div>
+              </div>
+              <!-- /.modal-content -->
+          </div>
+          <!-- /.modal-dialog -->
+      </div>
+      <!-- /.modal -->
+
+      <h4>Example Modal Dialog</h4>
+      <div class="modal fade in paradata-modal proto-example-dialog" tabindex="-1" role="dialog" style="display: block;">
+          <div class="modal-dialog">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                      <h4 class="modal-title">Modal title</h4>
+                  </div>
+                  <div class="modal-body">
+                      <p>One fine body&hellip;</p>
+                  </div>
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                      <button type="button" class="btn btn-primary">Save changes</button>
+                  </div>
+              </div>
+              <!-- /.modal-content -->
+          </div>
+          <!-- /.modal-dialog -->
+      </div>
+      <!-- /.modal -->
+
+
+      <!-- END: CONTENT HERE -->
+
+      <!-- BEGIN: CODE SNIPPET -->
+      <h4>Code Snippet</h4>
+      <div class="highlight">
+      <pre>
+      <code class="html">
+      <!-- BEGIN: HTML SNIPPET -->
+        <div class="modal fade in paradata-modal proto-example-dialog" tabindex="-1" role="dialog" style="display: block;">
+          <div class="modal-dialog">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                      <h4 class="modal-title">Modal title</h4>
+                  </div>
+                  <div class="modal-body">
+                      <p>One fine body&hellip;</p>
+                  </div>
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                      <button type="button" class="btn btn-primary">Save changes</button>
+                  </div>
+              </div>
+              <!-- /.modal-content -->
+          </div>
+          <!-- /.modal-dialog -->
+      </div>
+      <!-- END: HTML SNIPPET -->
+      </code>
+      </pre>
+      </div><!--/.highlight-->
+      <!-- END: CODE SNIPPET -->
+  </div>
+</div><!--/.panel-body-->
+
+
+
+
 
 <section ng-app="myApp" ng-controller="ModalCtrl as modalForm">
   <h2>Modal Dialog Wizard</h2>
