--- a/app/assets/scss/theme.scss
+++ b/app/assets/scss/theme.scss
@@ -8,7 +8,7 @@
 // Plugins Restyling
 // @import "theme/select2";
 
-// Vendavo Bootstrap Overrides
+// Bootstrap Overrides
 // Page Layout
 @import "theme/offcanvas";
 @import "theme/layout";
