--- a/app/assets/scss/theme/animation.scss
+++ b/app/assets/scss/theme/animation.scss
@@ -1,4 +1,4 @@
-/* BEGIN: animation.scss - Custom Vendavo Animation
+/* BEGIN: animation.scss - Custom Animation
 // -----------------------------------------------------*/
 
 .animate25s {
