--- a/app/components/dialogs/index.html
+++ b/app/components/dialogs/index.html
@@ -16,7 +16,7 @@
     <h6>Navigate To:</h6>
     <ul>
       <li><a href="#presentation-state">Dialog</a></li>
-      <li><a href="#readonly-state">Angular Dialog</a></li>
+      <li><a href="#angular-dialog">Angular Dialog</a></li>
     </ul>
   </div>
   <div>
@@ -26,8 +26,6 @@
 
 <!-- Page Content
 ================================================== -->
-
-
 <div class="panel panel-default">
   <div class="panel-heading">
     <h3 class="panel-title" id="presentation-state">Modal Dialog</h3>
@@ -39,7 +37,7 @@
            
       <h4>Launch Modal Dialog</h4>
       <!-- Button trigger modal -->
-      <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modalExample">Launch demo modal</button>
+      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalExample">Launch demo modal</button>
       <div id="modalExample" class="modal fade in paradata-modal" tabindex="-1" role="dialog">
           <div class="modal-dialog">
               <div class="modal-content">
@@ -119,6 +117,91 @@
   </div>
 </div><!--/.panel-body-->
 
+
+<!-- Angular Modal Dialog -->
+<!-- ==================== -->
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title" id="angular-dialog">Angular Modal Dialog</h3>
+  </div>
+  <div class="panel-body">
+      <!-- BEGIN: CONTENT HERE -->
+
+      <!-- <h4>Example Modal Dialog with Form</h4> -->
+      <div class="modal fade in paradata-modal proto-example-dialog" tabindex="-1" role="dialog" style="display: block;">
+          <div class="modal-dialog">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                      <h4 class="modal-title">Import Prices</h4>
+                  </div>
+                  <div class="modal-body">
+                    <form class="form-horizontal">
+                         <fieldset>
+                              <legend>Specify Price Type</legend>
+                              <dl>
+                                  <dt>Quote Source</dt>
+                                  <dd class="radio">
+                                       <label>
+                                           <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked> <strong>Partner</strong> (Electronics Manufacturing Services, Original Design Manufacturing)
+                                       </label>
+                                  </dd>
+                                  <dd class="radio">
+                                       <label>
+                                           <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2"> Supplier
+                                       </label>
+                                  </dd>
+                              </dl>
+                         </fieldset>
+                    </form>
+
+                  </div>
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                      <button type="button" class="btn btn-primary">Save changes</button>
+                  </div>
+              </div>
+              <!-- /.modal-content -->
+          </div>
+          <!-- /.modal-dialog -->
+      </div>
+      <!-- /.modal -->
+
+
+      <!-- END: CONTENT HERE -->
+
+      <!-- BEGIN: CODE SNIPPET -->
+      <h4>Code Snippet</h4>
+      <div class="highlight">
+      <pre>
+      <code class="html">
+      <!-- BEGIN: HTML SNIPPET -->
+        <div class="modal fade in paradata-modal proto-example-dialog" tabindex="-1" role="dialog" style="display: block;">
+          <div class="modal-dialog">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                      <h4 class="modal-title">Modal title</h4>
+                  </div>
+                  <div class="modal-body">
+                      <p>One fine body&hellip;</p>
+                  </div>
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                      <button type="button" class="btn btn-primary">Save changes</button>
+                  </div>
+              </div>
+              <!-- /.modal-content -->
+          </div>
+          <!-- /.modal-dialog -->
+      </div>
+      <!-- END: HTML SNIPPET -->
+      </code>
+      </pre>
+      </div><!--/.highlight-->
+      <!-- END: CODE SNIPPET -->
+  </div>
+</div><!--/.panel-body-->
 
 
 
